--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -25,6 +25,7 @@ h6 {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
   letter-spacing: 1px;
+  color: #F3F3F3
 }
 p {
   margin: 0 0 25px;
@@ -33,13 +34,13 @@ p {
 }
 @media (min-width: 768px) {
   p {
-    margin: 0 0 35px;
+    margin: 35px 35px 35px;
     font-size: 20px;
     line-height: 1.6;
   }
 }
 a {
-  color: #42DCA3;
+  color: #E84725;
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
@@ -258,16 +259,16 @@ a:focus {
   border-radius: 0;
 }
 .btn-default {
-  border: 1px solid #42DCA3;
-  color: #42DCA3;
+  border: 1px solid #E84725;
+  color: #E84725;
   background-color: transparent;
 }
 .btn-default:hover,
 .btn-default:focus {
-  border: 1px solid #42DCA3;
+  border: 1px solid #E84725;
   outline: none;
   color: black;
-  background-color: #42DCA3;
+  background-color: @FF5733;
 }
 ul.banner-social-buttons {
   margin-top: 0;
